parser/src/test/resources/corpus/valid/44_per_annum.ff
rule "Per Annum" {
  let mgmt = 1.5% per annum
  let perf = 8% per annum
}
