parser/src/test/resources/corpus/invalid/09_let_outside_rule.ff
let global_constant = 1.5%

rule "After Stray Let" {
  description: "let must be inside a rule body"
}
